--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -426,8 +426,26 @@
   .h-96 {
     height: calc(var(--spacing) * 96);
   }
+  .h-\[4\.5rem\] {
+    height: 4.5rem;
+  }
   .h-full {
     height: 100%;
+  }
+  .max-h-\[6\.5rem\] {
+    max-height: 6.5rem;
+  }
+  .min-h-\[4\.5rem\] {
+    min-height: 4.5rem;
+  }
+  .min-h-\[4rem\] {
+    min-height: 4rem;
+  }
+  .min-h-\[5rem\] {
+    min-height: 5rem;
+  }
+  .min-h-\[6\.5rem\] {
+    min-height: 6.5rem;
   }
   .min-h-screen {
     min-height: 100vh;
