--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -15,6 +15,7 @@
     --color-orange-200: oklch(90.1% 0.076 70.697);
     --color-orange-400: oklch(75% 0.183 55.934);
     --color-orange-500: oklch(70.5% 0.213 47.604);
+    --color-orange-600: oklch(64.6% 0.222 41.116);
     --color-orange-700: oklch(55.3% 0.195 38.402);
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-yellow-50: oklch(98.7% 0.026 102.212);
@@ -28,7 +29,6 @@
     --color-green-500: oklch(72.3% 0.219 149.579);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-blue-100: oklch(93.2% 0.032 255.585);
-    --color-blue-200: oklch(88.2% 0.059 254.128);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-indigo-50: oklch(96.2% 0.018 272.314);
@@ -104,6 +104,7 @@
     --default-mono-font-family: var(--font-mono);
     --color-harmony-light: #f8f9fd;
     --color-harmony-dark: #171d29;
+    --color-harmony-orange: #ff9a2e;
   }
 }
 @layer base {
@@ -826,6 +827,9 @@
   .border-gray-100 {
     border-color: var(--color-gray-100);
   }
+  .border-gray-200 {
+    border-color: var(--color-gray-200);
+  }
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
@@ -835,8 +839,26 @@
   .border-gray-700 {
     border-color: var(--color-gray-700);
   }
+  .border-harmony-dark\/10 {
+    border-color: color-mix(in srgb, #171d29 10%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-harmony-dark) 10%, transparent);
+    }
+  }
+  .border-harmony-dark\/20 {
+    border-color: color-mix(in srgb, #171d29 20%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-harmony-dark) 20%, transparent);
+    }
+  }
   .border-indigo-600 {
     border-color: var(--color-indigo-600);
+  }
+  .border-orange-500 {
+    border-color: var(--color-orange-500);
+  }
+  .border-orange-600 {
+    border-color: var(--color-orange-600);
   }
   .border-white {
     border-color: var(--color-white);
@@ -877,6 +899,9 @@
   .bg-gray-50 {
     background-color: var(--color-gray-50);
   }
+  .bg-gray-100 {
+    background-color: var(--color-gray-100);
+  }
   .bg-gray-300 {
     background-color: var(--color-gray-300);
   }
@@ -895,6 +920,9 @@
   .bg-green-400 {
     background-color: var(--color-green-400);
   }
+  .bg-harmony-light {
+    background-color: var(--color-harmony-light);
+  }
   .bg-indigo-300 {
     background-color: var(--color-indigo-300);
   }
@@ -906,6 +934,9 @@
   }
   .bg-orange-200 {
     background-color: var(--color-orange-200);
+  }
+  .bg-orange-500 {
+    background-color: var(--color-orange-500);
   }
   .bg-purple-300 {
     background-color: var(--color-purple-300);
@@ -949,6 +980,14 @@
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .from-\[\#23c55e\] {
+    --tw-gradient-from: #23c55e;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[\#23c55e\]\/90 {
+    --tw-gradient-from: color-mix(in oklab, #23c55e 90%, transparent);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .from-\[\#f3f4f6\] {
     --tw-gradient-from: #f3f4f6;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
@@ -975,6 +1014,10 @@
   }
   .from-gray-50 {
     --tw-gradient-from: var(--color-gray-50);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-gray-600 {
+    --tw-gradient-from: var(--color-gray-600);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .from-green-500 {
@@ -1021,6 +1064,10 @@
     --tw-gradient-from: var(--color-red-500);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .from-white {
+    --tw-gradient-from: var(--color-white);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .from-yellow-50 {
     --tw-gradient-from: var(--color-yellow-50);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
@@ -1042,6 +1089,18 @@
     --tw-gradient-via: var(--color-purple-800);
     --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
     --tw-gradient-stops: var(--tw-gradient-via-stops);
+  }
+  .to-\[\#23c55e\]\/70 {
+    --tw-gradient-to: color-mix(in oklab, #23c55e 70%, transparent);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#f3f4f6\] {
+    --tw-gradient-to: #f3f4f6;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#f59e0b\] {
+    --tw-gradient-to: #f59e0b;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-\[\#f59e0b\]\/5 {
     --tw-gradient-to: color-mix(in oklab, #f59e0b 5%, transparent);
@@ -1067,12 +1126,20 @@
     --tw-gradient-to: var(--color-gray-100);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .to-gray-700 {
+    --tw-gradient-to: var(--color-gray-700);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .to-green-500 {
     --tw-gradient-to: var(--color-green-500);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-green-600 {
     --tw-gradient-to: var(--color-green-600);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-harmony-orange {
+    --tw-gradient-to: var(--color-harmony-orange);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-indigo-50 {
@@ -1253,10 +1320,6 @@
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
   }
-  .text-base {
-    font-size: var(--text-base);
-    line-height: var(--tw-leading, var(--text-base--line-height));
-  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
@@ -1297,11 +1360,17 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-\[\#25D366\] {
+    color: #25D366;
+  }
   .text-\[\#111827\] {
     color: #111827;
   }
   .text-\[\#111827\]\/70 {
     color: color-mix(in oklab, #111827 70%, transparent);
+  }
+  .text-\[\#111827\]\/80 {
+    color: color-mix(in oklab, #111827 80%, transparent);
   }
   .text-\[\#111827\]\/85 {
     color: color-mix(in oklab, #111827 85%, transparent);
@@ -1354,14 +1423,44 @@
   .text-green-500 {
     color: var(--color-green-500);
   }
-  .text-indigo-100 {
-    color: var(--color-indigo-100);
+  .text-harmony-dark {
+    color: var(--color-harmony-dark);
+  }
+  .text-harmony-dark\/80 {
+    color: color-mix(in srgb, #171d29 80%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-harmony-dark) 80%, transparent);
+    }
+  }
+  .text-harmony-dark\/85 {
+    color: color-mix(in srgb, #171d29 85%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-harmony-dark) 85%, transparent);
+    }
+  }
+  .text-harmony-dark\/90 {
+    color: color-mix(in srgb, #171d29 90%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-harmony-dark) 90%, transparent);
+    }
+  }
+  .text-harmony-light {
+    color: var(--color-harmony-light);
+  }
+  .text-harmony-light\/90 {
+    color: color-mix(in srgb, #f8f9fd 90%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-harmony-light) 90%, transparent);
+    }
   }
   .text-indigo-200 {
     color: var(--color-indigo-200);
   }
   .text-indigo-600 {
     color: var(--color-indigo-600);
+  }
+  .text-orange-400 {
+    color: var(--color-orange-400);
   }
   .text-orange-700 {
     color: var(--color-orange-700);
@@ -1377,6 +1476,12 @@
   }
   .text-white {
     color: var(--color-white);
+  }
+  .text-white\/90 {
+    color: color-mix(in srgb, #fff 90%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-white) 90%, transparent);
+    }
   }
   .text-yellow-400 {
     color: var(--color-yellow-400);
@@ -1396,6 +1501,14 @@
   .placeholder-\[\#111827\]\/50 {
     &::placeholder {
       color: color-mix(in oklab, #111827 50%, transparent);
+    }
+  }
+  .placeholder-harmony-dark\/50 {
+    &::placeholder {
+      color: color-mix(in srgb, #171d29 50%, transparent);
+      @supports (color: color-mix(in lab, red, red)) {
+        color: color-mix(in oklab, var(--color-harmony-dark) 50%, transparent);
+      }
     }
   }
   .opacity-10 {
@@ -1529,6 +1642,13 @@
       }
     }
   }
+  .hover\:bg-\[\#f97316\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #f97316;
+      }
+    }
+  }
   .hover\:bg-gray-50 {
     &:hover {
       @media (hover: hover) {
@@ -1547,6 +1667,16 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-gray-400);
+      }
+    }
+  }
+  .hover\:bg-harmony-dark\/10 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, #171d29 10%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-harmony-dark) 10%, transparent);
+        }
       }
     }
   }
